:sparkles: Add deploy controller

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
 
+APP_DEPLOY_TOKEN=
+
 APP_LOCALE=fr
 APP_FALLBACK_LOCALE=fr
 APP_FAKER_LOCALE=en_US
