--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "@heroicons/vue": "^2.2.0",
         "@vueuse/core": "^12.0.0",
         "swiper": "^11.1.15",
-        "vue-i18n": "10"
+        "vue-i18n": "10",
+        "vuedraggable": "^4.1.0"
     }
 }
